2011-10-11  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: LOG_DRIVER variables can be defined through AC_SUBST
	* tests/test-driver-acsubst.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-10-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: warn on conditional TEST_EXTENSIONS definition
	Before this change, automake would have still bailed out, but
	with a confusing error message (about an invalid redefinition
	of TEST_EXTENSIONS).
	* automake.in (handle_tests): Warn explicitly if TEST_EXTENSIONS
	has conditional contents.
	* tests/test-extensions-con.test: New test.
	* tests/Makefile.am (TESTS): Add it.
	* NEWS: Update.

2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: don't allow @substitutions@ in TEST_EXTENSIONS
	Even after the last commit `v1.11-476-g90bea64', the checks
	performed by automake on entries in $(TEST_EXTENSIONS) tried to
	allow for @substitited@ stuff.  This however ends up allowing
	quite brittle setups, which, most importantly, are of no real
	practical usefulness anyway.  So it's better to just disallow
	@substitutions@ in TEST_EXTENSIONS altogether, offering a clear
	error message, instead of risking weird bugs and unexpected
	behaviors in the generated Makefile.in.
	* automake.in ($TEST_EXTENSION_PATTERN): Turned from a regular
	expression ...
	(is_valid_test_extension): ... into this subroutine.  Don't allow
	generic @substitutions@ anymore (possibly making an exception for
	`@EXEEXT@' under the proper circumstances).
	* tests/test-extensions.test: Adjust and extend.  This test does
	not cause any internal error in automake anymore now.

2011-10-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure in 'insthook.test'
	* tests/insthook.test (Makefile.am): Add a proper `uninstall-hook'
	target to remove the symlink created by the `install-exec-hook'
	target; this prevents "make distcheck" from failing spuriously.