@@ -1,5 +1,11 @@
 2011-10-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	coverage: conditional contents in LOG_DRIVER variables
+	* tests/test-driver-cond.test: New test.
+	* tests/Makefile.am (TESTS): Add it.
+
+2011-10-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	coverage: LOG_DRIVER variables can be defined through AC_SUBST
 	* tests/test-driver-acsubst.test: New test.
 	* tests/Makefile.am (TESTS): Add it.
